tests/fixtures/valid/multi/instantiated_import_type_binding/src/lib/lib.gcl
// lib.gcl -- library with a bindable type
pub type Widget {
    Widget(size: Length),
}

pub const node origin: Widget = Widget(size: 1.0 m);
pub const node origin_size: Length = @origin.size;
