tests/fixtures/invalid/index_name_as_type.gcl
// Error: an index name is not a value type.
index Maneuver = { A, B };

node x: Maneuver = 1.0;
